[gd_scene load_steps=15 format=3 uid="uid://d01al8m7n6p5q"]

[ext_resource type="TileSet" uid="uid://cxftojto2pcc2" path="res://assets/tile_set.tres" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dteak71k8ajlu" path="res://src/module/terrain_layer.gd" id="2_terrain"]
[ext_resource type="Script" uid="uid://cvjce0jmuery0" path="res://src/module/city_layer.gd" id="3_city"]
[ext_resource type="Script" uid="uid://25ns2urp21cx" path="res://src/module/camera_2d.gd" id="4_h2yge"]
[ext_resource type="Texture2D" uid="uid://hkctoo2ksjb1" path="res://assets/cursor.png" id="5_1bvp3"]
[ext_resource type="Script" uid="uid://dmdy67vymyb6c" path="res://src/module/cursor_controller.gd" id="6_cursor"]
[ext_resource type="Script" uid="uid://chf30juptw8gv" path="res://src/module/building_selector.gd" id="7_selector"]
[ext_resource type="Script" uid="uid://dbhbmwdvbn7pv" path="res://src/module/road_layer.gd" id="8_road"]
[ext_resource type="Texture2D" uid="uid://g312tc388wh3" path="res://assets/city.png" id="9_city_icon"]
[ext_resource type="Texture2D" uid="uid://dmnglur0eah4x" path="res://assets/railway.png" id="10_railway_icon"]
[ext_resource type="Texture2D" uid="uid://b3fne5t8y1wc3" path="res://assets/highway.png" id="11_highway_icon"]
[ext_resource type="Texture2D" uid="uid://chb5033atl8y" path="res://assets/road.png" id="12_road_icon"]
[ext_resource type="Script" uid="uid://br4q3qtyjy32n" path="res://src/scene/game.gd" id="13_game"]
[ext_resource type="TileSet" uid="uid://bl4lhbgqcwkiv" path="res://assets/city_tile_set.tres" id="14_city_tiles"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_game")

[node name="GameWorld" type="Node2D" parent="."]

[node name="TerrainLayer" type="TileMapLayer" parent="GameWorld"]
tile_set = ExtResource("1_ig7tw")
script = ExtResource("2_terrain")

[node name="CityLayer" type="TileMapLayer" parent="GameWorld"]
tile_set = ExtResource("14_city_tiles")
script = ExtResource("3_city")

[node name="RoadLayer" type="Node2D" parent="GameWorld"]
script = ExtResource("8_road")

[node name="Camera2D" type="Camera2D" parent="GameWorld"]
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("4_h2yge")

[node name="Cursor" type="Sprite2D" parent="GameWorld"]
texture = ExtResource("5_1bvp3")
script = ExtResource("6_cursor")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("7_selector")

[node name="Selector" type="Panel" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 493.0
offset_right = 401.0
offset_bottom = 702.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Selector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/Selector/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "建筑选择器"

[node name="BuildingLabel" type="Label" parent="CanvasLayer/Selector/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "建筑类型:"

[node name="BuildingContainer" type="HBoxContainer" parent="CanvasLayer/Selector/VBoxContainer"]
layout_mode = 2

[node name="CityButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/BuildingContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "城市"
icon = ExtResource("9_city_icon")

[node name="RailwayButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/BuildingContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "铁路"
icon = ExtResource("10_railway_icon")

[node name="HighwayButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/BuildingContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "高速"
icon = ExtResource("11_highway_icon")

[node name="RoadButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/BuildingContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "公路"
icon = ExtResource("12_road_icon")

[node name="ModeLabel" type="Label" parent="CanvasLayer/Selector/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "建造模式:"

[node name="ModeContainer" type="HBoxContainer" parent="CanvasLayer/Selector/VBoxContainer"]
layout_mode = 2

[node name="PaintButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/ModeContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "绘制模式"

[node name="RoadButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/ModeContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "道路模式"

[node name="DeleteButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer/ModeContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "删除模式"

[node name="SpreadToggleButton" type="Button" parent="CanvasLayer/Selector/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "蔓延: 开启"

[node name="TopPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = -2.0
offset_bottom = 28.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 5.0
offset_right = -20.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="CanvasLayer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "BitMap"

[node name="GameData" type="HBoxContainer" parent="CanvasLayer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PositionLabel" type="Label" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "坐标: (0, 0)"

[node name="VSeparator1" type="VSeparator" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2

[node name="BuildTypeLabel" type="Label" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "建造: 绘制模式"

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "时间: 00:00:00"

[node name="VSeparator3" type="VSeparator" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="CanvasLayer/TopPanel/HBoxContainer/GameData"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "城市: 0 | 道路: 0"

[node name="Spacer" type="Control" parent="CanvasLayer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="CanvasLayer/TopPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "返回菜单"
